--- a/project/style/style.css
+++ b/project/style/style.css
@@ -21,3 +21,77 @@ section img {
     display: block;
     margin: auto;
 }
+
+body {
+    background-color: #bbb;
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    padding: 20px;
+}
+
+header {
+    background-color: #fff;
+    padding: 5px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    padding: 20px;
+}
+
+header img {
+    width: 125px;
+    height: auto;
+}
+
+.headings {
+    display: flex;
+    flex-direction: column;
+}
+
+.heading h1 {
+    font-size: 2rem;
+    color: navy;
+    margin: 0;
+}
+
+.motto {
+    font-style: italic;
+    color: forestgreen;
+    font-size: 1rem;
+    letter-spacing: 1.5pt;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+}
+
+nav a {
+    text-decoration: none;
+}
+
+nav li {
+    display: inline;
+}
+
+footer p {
+    font-size: 1rem;
+    padding: 20px;
+}
+
+main section p {
+    padding: 30px;
+}
+
+main section img {
+    padding: 30px;
+}
+
+.social {
+    text-align: right;
+}
