--- a/project/style/style.css
+++ b/project/style/style.css
@@ -15,8 +15,18 @@
         display: block;
     }
     
+    a:hover {
+        color: blue;
+        text-decoration: underline;
+    }
+    
     ul {
         display: flex;
+    }
+    
+    main img {
+        border: 1px solid #ccc;
+        box-shadow: 5px 5px 5px #999;
     }
     /* end global */
     /* header */
@@ -33,7 +43,6 @@
     }
     
     header img {
-        margin-left: 25px;
         width: 90px;
     }
     
@@ -42,14 +51,103 @@
         color: navy;
         margin: 0;
     }
+    
+    .hero img {
+        width: 100%;
+        height: 250px;
+        grid-column: 1 / -1;
+        grid-row: 1;
+    }
     /* end headings */
     /* body */
+    
+    .hero {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .action {
+        background-color: rgba(240, 240, 240, 0.8);
+        margin: 1em 3em;
+        padding: 1em;
+        text-align: center;
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .action button {
+        line-height: 2em;
+        width: 100px;
+        background-color: white;
+        font-size: 15px;
+    }
     
     body {
         background-color: gray;
         padding: 0;
         margin: 0;
         font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    .tmpl {
+        width: 100%;
+        margin: auto;
+    }
+    
+    .pcon {
+        padding-top: 15px;
+        display: grid;
+        grid-gap: 10px;
+    }
+    
+    @media screen and (max-width: 550px) {
+        .pcon {
+            display: block;
+        }
+    }
+    
+    .pcon h2 {
+        padding: 10px;
+        margin: auto;
+        text-align: center;
+    }
+    
+    .pcon p {
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 10px;
+    }
+    
+    .pcon img {
+        width: 400px;
+    }
+    
+    .par1 {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    
+    .par2 {
+        grid-column: 1/2;
+        grid-row: 2/2;
+    }
+    
+    .par3 {
+        grid-column: 2/2;
+        grid-row: 1/2;
+    }
+    
+    .par4 {
+        grid-column: 2/2;
+        grid-row: 2/2;
+    }
+    
+    .par5 {
+        padding: 20px;
+    }
+    
+    .par5 h2 {
+        text-align: center;
     }
     /* end body */
     
@@ -115,11 +213,55 @@
         padding: 10px;
         margin-top: 0;
     }
-    /* end footer */
     
-    .tmpl {
-        width: 100%
+    .foot img {
+        width: 20px;
     }
+    
+    .foot p {
+        margin: 0;
+        padding: 0;
+        position: relative;
+    }
+    
+    .foot {
+        margin-left: auto;
+        display: grid;
+    }
+    
+    .i1 {
+        grid-row: 1/2;
+        grid-column: 1/2;
+        margin-left: auto;
+    }
+    
+    .p1 {
+        grid-row: 1/2;
+        grid-column: 2/2;
+    }
+    
+    .i2 {
+        grid-row: 2/2;
+        grid-column: 1/2;
+        margin-left: auto;
+    }
+    
+    .p2 {
+        grid-row: 2/2;
+        grid-column: 2/2;
+    }
+    
+    .i3 {
+        grid-row: 3/3;
+        grid-column: 1/2;
+        margin-left: auto;
+    }
+    
+    .p3 {
+        grid-row: 3/3;
+        grid-column: 2/2;
+    }
+    /* end footer */
     
     section {
         background-color: lightgray;
@@ -132,15 +274,4 @@
     
     p {
         margin: auto;
-    }
-    
-    .pcon h2 {
-        padding: 10px;
-        margin: auto;
-    }
-    
-    .pcon p {
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-bottom: 10px;
     }
