--- a/project/style/style.css
+++ b/project/style/style.css
@@ -275,3 +275,145 @@
     p {
         margin: auto;
     }
+    /* amenities page */
+    
+    .amen {
+        text-align: center;
+        padding: 20px;
+        margin: 0;
+    }
+    
+    .ima {
+        width: 95%;
+        margin: auto;
+    }
+    
+    .a1 {
+        display: grid;
+        grid-column-gap: 10px;
+        padding: 20px;
+    }
+    
+    .a1 img {
+        grid-column: 1;
+    }
+    
+    .a2 {
+        display: grid;
+        grid-column-gap: 10px;
+        padding: 20px;
+    }
+    
+    .a2 img {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .me1 {
+        grid-column: 2;
+        display: grid;
+    }
+    
+    .a1 .me1 h2 {
+        grid-row: 1;
+        margin-top: 65px;
+        text-align: center;
+    }
+    
+    .a1 .me1 p {
+        margin: 0;
+        grid-row: 2;
+        margin-bottom: 60px;
+    }
+    
+    .me2 {
+        grid-column: 1;
+        display: grid;
+    }
+    
+    .a2 .me2 h2 {
+        grid-row: 1;
+        margin-top: 65px;
+        text-align: center;
+    }
+    
+    .a2 .me2 p {
+        margin: 0;
+        grid-row: 2;
+        margin-bottom: 60px;
+    }
+    /* end amenities */
+    /* reservations page */
+    
+    .resf {
+        display: grid;
+        text-align: center;
+        padding: 20px;
+    }
+    
+    .resf textarea {
+        width: 200px;
+    }
+    
+    .resf input {
+        margin: auto;
+        width: 200px;
+    }
+    
+    .resf h2 {
+        font-size: 18px;
+    }
+    
+    .d1 {
+        margin: auto;
+        grid-row: 1;
+        grid-column: 1;
+    }
+    
+    .d2 {
+        margin: auto;
+        grid-row: 1;
+        grid-column: 2;
+    }
+    
+    .sr {
+        margin: auto;
+        grid-row: 2;
+        grid-column: 1;
+    }
+    
+    .gue {
+        margin: auto;
+        grid-row: 2;
+        grid-column: 2;
+    }
+    
+    .beds {
+        margin: auto;
+        grid-row: 3;
+        grid-column: 1;
+    }
+    
+    .pho {
+        margin: auto;
+        grid-row: 3;
+        grid-column: 2;
+    }
+    
+    .ema {
+        margin: auto;
+        grid-row: 4;
+        grid-column: 1;
+    }
+    
+    .old {
+        margin: auto;
+        grid-row: 4;
+        grid-column: 2;
+    }
+    
+    .reserve {
+        margin: auto;
+        width: 100px;
+        padding-bottom: 20px;
+    }
