--- a/project/style/style.css
+++ b/project/style/style.css
@@ -417,3 +417,47 @@
         width: 100px;
         padding-bottom: 20px;
     }
+    /* end reservation */
+    /* temple spotlight */
+    
+    .templediv {
+        width: 100%;
+        text-align: center;
+        padding-top: 50px;
+    }
+    
+    .tmplinfo {
+        display: grid;
+        text-align: center;
+        padding: 20px;
+    }
+    
+    .tm1 {
+        grid-row: 1;
+        grid-column: 1;
+    }
+    
+    .tm2 {
+        grid-row: 1;
+        grid-column: 2;
+    }
+    
+    .tm3 {
+        grid-row: 2;
+        grid-column: 1;
+    }
+    
+    .tm4 {
+        grid-row: 2;
+        grid-column: 2;
+    }
+    
+    .tm5 {
+        grid-row: 3;
+        grid-column: 1/3;
+    }
+    
+    main hr {
+        height: 3px;
+        background-color: #4E6151;
+    }
