--- a/css/finalcss.css
+++ b/css/finalcss.css
@@ -152,6 +152,7 @@ footer img {
 
 .faqm {
     display: grid;
+    grid-template-columns: 50% 50%;
     grid-gap: 10px;
     background-color: lightgray;
     padding: 20px;
@@ -160,12 +161,15 @@ footer img {
 .faqm h2 {
     border: 2px solid gray;
     text-align: center;
+    font-size: 20px;
     margin: 0;
 }
 
 .faqm p {
     border: 2px solid gray;
     margin: 0;
+    padding: 10px;
+    height: 120px;
 }
 
 main img {
