--- a/css/finalcss.css
+++ b/css/finalcss.css
@@ -109,6 +109,7 @@ nav a:hover {
 .hro img {
     width: 90%;
     padding: 10px;
+    box-shadow: 3px 3px 3px #999;
 }
 
 
@@ -235,4 +236,74 @@ main {
 .set button {
     margin: 10px;
     padding: 7px;
+}
+
+
+/* start workouts */
+
+.work {
+    text-align: center;
+    padding: 20px;
+    box-shadow: 5px 5px 5px #999;
+    width: 70%;
+    margin: auto;
+}
+
+.inf {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid gray;
+    margin: 20px 35px 20px 35px;
+}
+
+.ex {
+    display: grid;
+    text-align: center;
+    width: 90%;
+    margin: auto;
+    padding: 20px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0px;
+}
+
+.bx {
+    border: 1px solid gray;
+}
+
+.hd {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+.box1 {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.box2 {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.box3 {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+.box4 {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+.box5 {
+    grid-row: 3;
+    grid-column: 2;
+}
+
+.box6 {
+    grid-row: 3;
+    grid-column: 3;
 }
